--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
-    "mongoose": "^8.9.6",
+    "mongoose": "^8.13.0",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0"
   }
 }
