Значення EMAIL беруться з .env , підключив плагіни ESLint і Prettier

--- a/.env
+++ b/.env
@@ -11,3 +11,8 @@ MAILTRAP_HOST=sandbox.smtp.mailtrap.io
 MAILTRAP_PORT=2525
 MAILTRAP_USER=0d5947e7f99d78
 MAILTRAP_PASS=16bd6293f2426f
+
+EMAIL_FROM=no-reply@todoapp.com
+EMAIL_TO=dan.namba.van.1@gmail.com
+
+
